# test-cpp

./: .gitignore  CMakeLists.txt  REDAME  shared_ptr_helper-test.cpp  shared_ptr_helper.h  test  test-mem_align.cpp  test-placement_new.cpp  test-stl.cpp
Makefile_os_remote/: CMakeLists.txt
Makefile_os_remote/client/: LOG  os_client_wrap.cc  os_remote_client.c  util.c
Makefile_os_remote/common/: os_arg_convert.c  os_remote.proto
Makefile_os_remote/server/: os_server_wrap.c  os_server_wrap.h
Makefile_os_remote/test_example/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h
cmake_grpc/sqlite_client/: CMakeLists.txt  CMakeLists.txt.bak
cmake_grpc/sqlite_client/cmake/: os_rpc.cmake
cmake_grpc/sqlite_client/pb/: os_rpc.grpc.pb.cc  os_rpc.grpc.pb.h  os_rpc.pb.cc  os_rpc.pb.h
cmake_grpc/sqlite_client/protos/: os_rpc.proto
cmake_grpc/sqlite_client/src/: Makefile  client.cpp  main.c  os_unix.c
cmake_grpc/sqlite_server/: CMakeLists.txt
cmake_grpc/sqlite_server/cmake/: os_rpc.cmake
cmake_grpc/sqlite_server/include/: Makefile
cmake_grpc/sqlite_server/protos/: gen_pb.txt  os_rpc_init.proto  os_rpc_open.proto
cmake_grpc/sqlite_server/src/: os_rpc.c  server.cpp
compare-gluster-and-gprc/: CMakeLists.txt  README.md
compare-gluster-and-gprc/gluster/: CMakeLists.txt  test_gluster.cpp
compare-gluster-and-gprc/grpc/: CMakeLists.txt  client.cpp  server.cpp  test.cmake
compare-gluster-and-gprc/grpc/protos/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
compare-gluster-and-gprc/util/: CMakeLists.txt  exception.cpp  exception.h  file_system.cpp  file_system.h  profiler.h  string_util.cpp  string_util.h  test_file.cpp  test_profiler.cpp
other/: CMakeLists.txt  VR_ARGS.cpp  auto_decltype.cpp  heap_and_stack.cpp  test_fstream.cpp  thread_join.cpp
sample-CMakeList.txt/: README.md
sample-CMakeList.txt/brpc/: CMakeLists.txt  README.md
sample-CMakeList.txt/brpc/cmake/: brpc.cmake
sample-CMakeList.txt/grpc/: CMakeLists.txt  README.md
sample-CMakeList.txt/grpc/cmake/: grpc-shared.cmake
test-IPC/: README.md
test-boost/: CMakeLists.txt  main.cpp
test-brpc/: .gitignore  CMakeLists.txt
test-brpc/cmake/: brpc.cmake
test-brpc/example/: flags_def.cpp  flags_def.h
test-brpc/example/helloworld_async/: CMakeLists.txt  client.cpp  server.cpp
test-brpc/example/helloworld_sync/: CMakeLists.txt  client.cpp  helloworld.proto  server.cpp
test-brpc/example/rdma_performance/: CMakeLists.txt
test-brpc/example/sync/: CMakeLists.txt  api.proto  client_handler.cpp  client_handler.h  config.h  gflags_def.cpp  lock_service.cpp  lock_service.h  server_handler.cpp  server_handler.h  test_client.cpp  test_server.cpp
test-brpc/example/tcp_performance/: CMakeLists.txt  client.cpp  server.cpp
test-brpc/util/: profiler.h
test-cmakelist/: CMakeLists.txt
test-cmakelist/subdir1/: CMakeLists.txt  subfile1.cpp
test-cmakelist/subdir1/subdir2/: CMakeLists.txt  subfile2.cpp
test-fork/: README.md  fork.cpp
test-git/: README.md  testfile.txt
test-glog/: CMakeLists.txt  LOG_20191110-171822.10380  LOG_20191110-181544.21532  test_glog.cpp
test-grpc/: CMakeLists.txt
test-grpc/cmake/: test_grpc.cmake
test-grpc/protos/: gen-proto.sh  test_grpc.grpc.pb.cc  test_grpc.grpc.pb.h  test_grpc.pb.cc  test_grpc.pb.h  test_grpc.proto
test-grpc/src/: main.cpp
test-grpc/src/client/: client.cpp
test-grpc/src/server/: server.cpp
test-grpc/src/util/: random_string.h
test-grpc2/: CMakeLists.txt
test-grpc2/cmake/: grpc.cmake  protobuf.cmake
test-grpc2/cpp/helloworld/: CMakeLists.txt
test-leveldb/: CMakeLists.txt
test-leveldb/cmake/: leveldb_cs.cmake  leveldb_cs.cmake.bak
test-leveldb/protos/: gen-proto.sh  leveldb_cs.proto
test-leveldb/src/client/: client.cpp
test-leveldb/src/server/: server.cpp
test-libevent/: CMakeLists.txt  client.cpp  client2.cpp  hello.cpp  new-client.cpp  server.cpp
test-logger/: CMakeLists.txt  logger.cpp  logger.h  test_logger.cpp
test-logger-withclass/: CMakeLists.txt  logger.cpp  logger.h  test_logger.cpp
test-mylog/: CMakeLists.txt  my_logger.h  test_mylog.cpp
test-namespace/: CMakeLists.txt  test_namespace.cpp
test-other-logger/: CMakeLists.txt  logger.cpp  logger.h  sys_logger.cpp  test_logger.cpp
test-rdma/: CMakeLists.txt  client.cpp  util.hpp
test-sizeOfStruct/: hello.cpp
test-socket/: CMakeLists.txt  README.txt
test-socket/src/: client.cpp  profiler.h
test-socket2/src/: random_string.h  server.cpp
test-spdlog/: CMakeLists.txt
test-spdlog/src/: easylogger.h  test.cpp
test_leveldb/: README.md
util/: CMakeLists.txt  README  file_system.h  file_system_test.cpp  profiler.h  profiler_test.cpp  string_util.h  string_util_test.cpp  test_chrono.cpp
